add google search console verification

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
-Coreforge's repo indexing site stuff
+  <meta name="google-site-verification" content="tAMrcW7dTvrggTLBCu3hP3yIyg7_HTLD3MqqHSGnvbo" />
+  <title>Coreforge's repo indexing site stuff</title>
 </head>
 <body>
 <h1>
